🎨Fix align

--- a/frontend/src/containers/NewsListPage/NewsListPage.css
+++ b/frontend/src/containers/NewsListPage/NewsListPage.css
@@ -1,7 +1,7 @@
 #header-left {
   background-color: white;
   width: 350px;
-  margin-left: 60px;
+  margin-left: 90px;
   font-size: 18px;
   margin-bottom: 20px;
   border-radius: 5px;
